[gd_scene load_steps=5 format=2]

[ext_resource path="res://RECURSOS/FONTS/akbar.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://SISTEMA/GUI/Puzzle/Cubo.gd" type="Script" id=2]
[ext_resource path="res://RECURSOS/IMAGENES/PUZZLE/CuboLleno_v2.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Cubo" type="TextureRect"]
margin_right = 192.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 96, 96 )
texture = ExtResource( 3 )
script = ExtResource( 2 )
tipo = "vacio"

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 48.0
margin_top = 72.0
margin_right = 152.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "asda"

[connection signal="mouse_entered" from="." to="." method="_on_Cubo_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Cubo_mouse_exited"]
